# ml-inference-platform

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py
.github/workflows/: ci.yml  deploy.yml  security.yml
app/: dependencies.py  inference.py  main.py  metrics.py  optimize.py  schemas.py
docker/: Dockerfile
k8s/: deployment.yaml  hpa.yaml  service.yaml
model/: benchmarks.md  optimize.py  train.py
monitoring/: grafana-dashboard.json
tests/: test_inference.py  test_main.py
