[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "ml-inference-platform"
version = "0.1.0"
description = "A scalable ML inference platform"
authors = [{name = "Author", email = "author@example.com"}]
dependencies = [
    "fastapi>=0.120.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "ultralytics>=8.0.0",
    "opencv-python-headless>=4.8.0.0",
    "python-multipart>=0.0.1"
]

[project.optional-dependencies]
development = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest-asyncio>=0.20.0",
    "httpx>=0.25.0"
]